<resources>
    <string name="app_name">Mine Hunter</string>
    <string name="game_name">Mine Hunter</string>
    <string name="title_activity_help">HelpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="linktosite">
        <a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">Link to CMPT276 site</a>
    </string>
    <string name="gameplay">Gameplay:</string>
    <string name="code_written_by_nomansh_arora_ngavin_nagra">Code written by:\nOmansh Arora\nGavin Nagra</string>
    <string name="you_must_bring_our_troops_home_nscan_the_battlefield_for_mines_by_clicking_on_a_square_nthe_number_that_shows_up_tells_you_how_nmany_mines_are_in_that_square_s_row_and_column_nyour_goal_is_to_reveal_all_the_mines_with_the_least_number_of_scans_ngood_luck_solider">You must bring our troops home!\nScan the battlefield for mines by clicking on a square.\nThe number that shows up tells you how\nmany mines are in that square\'s row and column.\nYour goal is to reveal all the mines with the least number of scans.\nGood luck solider!</string>
    <string name="about_the_authors">About the authors:</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="board_size">"%1$d"</string>
    <string name="boardSize">Board Size</string>
    <string name="num_of_mines">"%1$d"</string>
    <string name="options">Options</string>
    <string name="welcome">Welcome</string>
    <string name="skip">Skip</string>
    <string name="play_game">Play Game</string>
    <string name="options2">options</string>
    <string name="help">help</string>
</resources>