<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/camo"
    >

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="230dp"
        android:layout_height="204dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:background="#00FFFFFF"
        android:src="@drawable/chopper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:fontFamily="sans-serif-condensed"
        android:shadowColor="#834343"
        android:text="@string/game_name"
        android:textColor="#000000"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_mm_playGame"
        android:layout_width="161dp"
        android:layout_height="68dp"
        android:layout_marginTop="12dp"
        android:text="@string/play_game"
        android:textSize="20sp"
        android:textStyle="bold"
        app:iconTint="#90BD2828"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_mm_options"
        android:layout_width="128dp"
        android:layout_height="59dp"
        android:text="@string/options2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/btn_mm_playGame" />

    <Button
        android:id="@+id/btn_mm_help"
        android:layout_width="128dp"
        android:layout_height="59dp"
        android:layout_marginTop="1dp"
        android:text="@string/help"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/btn_mm_options" />

    <TextView
        android:id="@+id/txt_mm_gamesPlayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mm_help" />
</androidx.constraintlayout.widget.ConstraintLayout>